feat: add Brand and CarModels entity
