# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\BrandController;
 use App\Http\Controllers\Api\CarController;
 use Illuminate\Support\Facades\Route;
 
@@ -10,6 +11,9 @@ use Illuminate\Support\Facades\Route;
 Route::prefix('/v1')->group(function () {
     Route::get('/cars', [CarController::class, 'index'])->name('cars.index');
     Route::get('/cars/{id}', [CarController::class, 'show'])->name('cars.show');
+
+    Route::get('/brands', [BrandController::class, 'index'])->name('brands.index');
+    Route::get('/brands/{id}/models', [BrandController::class, 'getChildren'])->name('brands.children');
 //    Route::apiResource('/cars', CarController::class);
 //    Route::apiResource('/cars/{id}', CarController::class);
 });
